Fix home and dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@200;300;400;500;600;700;800&display=swap");
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Urbanist", sans-serif;
 }
